--- a/WiFiDirectTests2/app/src/main/AndroidManifest.xml
+++ b/WiFiDirectTests2/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
      or higher, you must declare the NEARBY_WIFI_DEVICES permission. -->
     <!-- If your app derives location information from Wi-Fi APIs,
          don't include the "usesPermissionFlags" attribute. -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <uses-permission
         android:name="android.permission.NEARBY_WIFI_DEVICES"
         android:required="true"
