--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -54,6 +54,8 @@
   </ImportGroup>
   <ImportGroup Label="Shared">
     <Import Project="..\Shared\Shared.vcxitems" Label="Shared" />
+    <Import Project="..\SharedWinSock\SharedWinSock.vcxitems" Label="Shared" />
+    <Import Project="..\SharedGeneral\SharedGeneral.vcxitems" Label="Shared" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
